# green-hill-cockpit

./: -- Create database and schema if not exi  .dockerignore  .env  .env.example  .gitignore  BUILD_STATUS.md  Dockerfile  Dockerfile.test  FORCE_SYNC.txt  README.md  README_DEPLOY.md  README_DEPLOYMENT.md  SECURITY_ALERT.txt  SETUP_COMPLETE.md  add_missing_constants.py  agent.py  bulletproof_deploy.py  cannabis_apps_architecture.md  cannabis_monitor.py  check_deployments.py  check_ground_control_config.py  check_status.py  check_streamlit_apps.py  create_autonomous_apps.py  deploy.sh  deploy_and_test.sh  diagnose_langgraph_auth.py  digital_roots_app.py  emergency_cache.db  emergency_config.json  emergency_deploy_apps.py  emergency_fix.py  enable_demo_mode.py  final_success_report.py  find_and_restore.py  fix_all_cannabis_apps.py  fix_all_syntax.py  fix_all_variables.py  fix_everything.py  fix_github_urls.py  (+40 more)
.github/workflows/: emergency-deploy.yml
.langgraph_api/: .langgraph_ops.pckl
agents/: ghc_dt.py
ghc_dt/: ghc_dt_agent.py  layout.py  registry.py
ghc_dt/adapters/: langgraph_client.py
green_hill_cockpit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: smoke_ghc_dt.http  trigger_revision.py
